--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <aside class="quiz">
             <center><h1 class="h1">My waifu</h1></center>
             <img src="anime/kyoko.webp">
-            <img src="sagiri.webp">
-            <img src="senjougahara.png">
+            <img src="anime/sagiri.webp">
+            <img src="anime/senjougahara.png">
+            <img src="anime/hojo.jpg">
             
             
         </aside>
