--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <main>
         <aside class="quiz">
             <center><h1 class="h1">My waifu</h1></center>
-            <img src="anime/kyoko.webp">
-            <img src="anime/sagiri.webp">
-            <img src="anime/senjougahara.png">
-            <img src="anime/hojo.jpg">
+            <img src="anime/kyoko.webp" width="500px" height="500px">
+            <img src="anime/sagiri.webp"width="500px" height="500px">
+            <img src="anime/senjougahara.png"width="500px" height="500px">
+            <img src="anime/hojo.jpg"width="500px" height="500px">
             
             
         </aside>
