--- a/kyxkx.html
+++ b/kyxkx.html
@@ -13,7 +13,7 @@
     </header>
     <main>
         <aside class="quiz">
-            <center><h1 class="h1">クルスダク Waifu</h1></center>
+            <center><h1 class="h1">きょだこ Waifu</h1></center>
             <h2>Kyoko Kirigiri</h2>
             <img src="anime/kyoko.webp" width="500px" height="500px">
             <h2>Sagiri Ameno</h2>
